--- a/MikuMikuWorld/res/i18n/ja.csv
+++ b/MikuMikuWorld/res/i18n/ja.csv
@@ -51,6 +51,7 @@ general, 一般
 key_config, キーコンフィグ
 language, 言語
 minify_usc, USCを圧縮
+show_sus_export,SUSエクスポートを表示
 auto, 自動
 auto_save, オートセーブ
 auto_save_enable, オートセーブ
