typo: `guide_cyan`

--- a/MikuMikuWorld/res/i18n/zh.csv
+++ b/MikuMikuWorld/res/i18n/zh.csv
@@ -188,7 +188,7 @@ guide_blue,蓝色
 guide_green,绿色
 guide_yellow,黄色
 guide_purple,紫色
-guide_cyan,情色
+guide_cyan,青色
 guide_black,黑色
 layer,图层
 edit_skill,编辑技能触发
