--- a/MikuMikuWorld/res/i18n/.template.csv
+++ b/MikuMikuWorld/res/i18n/.template.csv
@@ -130,8 +130,11 @@ shrink_down,
 shrink_up,
 connect_holds,
 split_hold,
-lerp_hispeeds,
 repeat_hold_mids,
+hold_to_traces,
+add_traces_for_hold,
+convert_hold_to_traces,
+lerp_hispeeds,
 step_type,
 ease_type,
 flick_type,
