--- a/MikuMikuWorld/res/i18n/en.csv
+++ b/MikuMikuWorld/res/i18n/en.csv
@@ -132,6 +132,9 @@ connect_holds,Connect Holds
 split_hold,Split Hold
 lerp_hispeeds,Interpolate Hi-Speeds
 repeat_hold_mids,Repeat Hold Mids
+hold_to_traces,Convert Hold to Traces
+add_traces_for_hold,Add Traces for Hold
+convert_hold_to_traces,Convert Hold to Traces
 step_type,Hold Mid Type
 ease_type,Ease Type
 flick_type,Flick Type
