Add: hispeeds and guides stats

--- a/MikuMikuWorld/res/i18n/.template.csv
+++ b/MikuMikuWorld/res/i18n/.template.csv
@@ -154,10 +154,12 @@ volume_master,
 volume_bgm,
 volume_se,
 statistics,
+hispeeds,
 taps,
 flicks,
 holds,
 steps,
+guides,
 traces,
 total,
 combo,
